--- a/html-css/index.html
+++ b/html-css/index.html
@@ -7,7 +7,7 @@
       <h1>HTML and CSS Assignments</h1>
       <nav>
         <ul>
-          <li><a href="wk01-assignment-exercise-files">Week 01 Assignment</li>
+          <li><a href="wk01-assignment-exercise-files/index.html">Week 01 Assignment</li>
         </ul>
       </nav>
     </body>
