--- a/html-css/week-02/bootstrap-example/index.html
+++ b/html-css/week-02/bootstrap-example/index.html
@@ -8,6 +8,7 @@
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald&family=Special+Elite&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -42,24 +43,46 @@
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
-			</div>
-		</div>
+			</div><!-- .carousel.slide #carouselExampleIndicators -->
+		</div><!-- .row -->
 		<div class="row">
-		</div>
-		<div class="row">
-			<div class="col-sm">
-				One of three columns
+			<div class="col-12 quote px-5 py-5">
+				<h3>The cave you fear to enter holds the treasure you seek.<br>
+				&mdash; Joseph Campbell</h3>
+			</div><!-- .col-12.quote ©-->
+		</div><!-- .row -->
+		<div class="row card-section px-5 py-5 mb-5" id="transportation" >
+			<div class="col-md-4">
+				<div class="card" style="width: 18rem;" ">
+					<img class="card-img-top" src="assets/imgs/1977-foxi-sparta.jpg" alt="1977-foxi-sparta">
+					<div class="card-body">
+					  <h5 class="card-title">1977 Foxi Sparta</h5>
+					  <p class="card-text">This Foxi is also known as a Foxi Sparta.  Sparta was a moped manufacture out of Holland. Sparta designed and produced the GT for United Moped to import to the US market.</p>
+					</div><!-- .card-body -->
+				  </div><!-- .card -->
 			</div>
-			<div class="col-sm">
-				One of three columns
+			<div class="col-md-4">
+				<div class="card" style="width: 18rem;" ">
+					<img class="card-img-top" src="assets/imgs/1979-motobecane-50v.jpg" alt="1979-motobecane-50v">
+					<div class="card-body">
+					  <h5 class="card-title">1979 Motobecane 50v</h5>
+					  <p class="card-text">The Mobylette 50v is arguably the most popular model by the Frech vintage moped manufacturer Motobecane.</p>
+					</div><!-- .card-body -->
+				  </div><!-- .card -->
 			</div>
-			<div class="col-sm">
-				One of three columns
+			<div class="col-md-4">
+				<div class="card" style="width: 18rem;" ">
+					<img class="card-img-top" src="assets/imgs/1979-sachs-westlake.jpg" alt="1979-sachs-westlake">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">The Westlake is a quality built Sachs model and was produced in West Germany in a partnership with the DKW/Hercules Co. who supplied the well engineer chassis and assembled the bikes along with other models like the Balboa, Suburban, Prima and G3.</p>
+					</div><!-- .card-body -->
+				  </div><!-- .card -->
 			</div>
-		</div>
+		</div> <!-- .card-section -->
 	</div><!-- .container-fluid -->
-	<div class="container">
-		<section class="bootstrap-list px-5 py-5">
+	<div class="container-fluid bootstrap-list">
+		<section class="px-5 py-5 col-md-10 mx-auto">
 			<h2>The Four Temperaments</h2>
 			<div class="row">
 
