Week 07 assignment finished added
Week 07 assignment finished added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html>
 	<head>
 		<title>Home Page</title>
+		<style>
+			nav {
+				position: static;
+				background-color: brown;
+			
+				ul li {
+					position: absolute;
+					top: 1px;
+				}
+			}
+			nav {
+				position: static;
+				background-color: brown;
+			}
+			nav ul li {
+					position: absolute;
+					top: 1px;
+			}
+			
+
+		</style>
 	</head>
 	<body>
 		<h1>Home page</h1>
@@ -10,5 +31,12 @@
 				<li><a href="html-css">HTML & CSS Assignments</a></li>
 			</ul>
 		</nav>
+		<p></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Malesuada fames ac turpis egestas sed. Iaculis at erat pellentesque adipiscing commodo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Porttitor rhoncus dolor purus non. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Ultrices neque ornare aenean euismod elementum nisi. Habitant morbi tristique senectus et netus. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Dui accumsan sit amet nulla facilisi. Elementum facilisis leo vel fringilla.
+	</p>
+
+<p>Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Ultrices sagittis orci a scelerisque purus semper. Ultrices sagittis orci a scelerisque purus semper. Nullam ac tortor vitae purus faucibus ornare suspendisse sed. Ac felis donec et odio. Sit amet justo donec enim diam vulputate. Enim nulla aliquet porttitor lacus luctus. Lobortis feugiat vivamus at augue eget arcu dictum varius duis. Mauris cursus mattis molestie a iaculis at erat. Semper viverra nam libero justo laoreet sit amet. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Feugiat in fermentum posuere urna nec tincidunt praesent semper feugiat. Laoreet id donec ultrices tincidunt arcu non sodales. Tellus mauris a diam maecenas sed enim ut sem viverra. Dui faucibus in ornare quam viverra. Magna fringilla urna porttitor rhoncus dolor. Integer feugiat scelerisque varius morbi enim nunc faucibus a. Mauris cursus mattis molestie a iaculis at erat. Eget mauris pharetra et ultrices neque. Et tortor at risus viverra adipiscing at in tellus.</p>
+
+<p>Vulputate odio ut enim blandit. Quis eleifend quam adipiscing vitae proin sagittis nisl. Vitae congue eu consequat ac felis donec et. Aenean pharetra magna ac placerat vestibulum lectus mauris. Tincidunt augue interdum velit euismod in pellentesque. Lectus arcu bibendum at varius. Cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Amet justo donec enim diam vulputate ut pharetra sit amet. Vulputate eu scelerisque felis imperdiet. Et molestie ac feugiat sed. Donec et odio pellentesque diam. Sed velit dignissim sodales ut eu sem integer. Accumsan tortor posuere ac ut consequat semper viverra nam. Nam aliquam sem et tortor consequat. Lacinia quis vel eros donec ac odio tempor orci dapibus.</p>
+
 	</body>
 </html>
