Adds Week-06 assignment finished

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -10,6 +10,7 @@
           <li><a href="wk01-lab-exercise-files/javascript_jquery.html">Week 01 Lab</li>
           <li><a href="wk01-assignment-exercise-files">Week 01 Assignment</li>
           <li><a href="week-02/bootstrap-example/">Week 02 Bootstrap Assignment</li>
+          <li><a href="2020-10-10-test-of-transitions-forms/town_hall_3/tickets.html">Week 06 Assignment Finished</li>
           <li><a href="wk07-assignment-exercise-file-FINISHED/town_hall_3/index.html">Week 07 Assignment Finished</li>          
         </ul>
       </nav>
